<resources>
    <string name="app_name">BeSafe</string>


    <!--    LINK DO API     -->
    <string name="apiLink">"https://bhpapi.herokuapp.com/api"</string>

    <!--    LOGOWANIE  AUTOMATYCZNE  -->
<!--    <string name="hardEmail">zhangbrian@harvey.biz</string>-->
<!--    <string name="hardPassword">james01</string>-->
    <string name="hardEmail">rsherman@irwin.com</string>
    <string name="hardPassword">copelandlarry</string>
<!--    <string name="hardEmail">bibiosm98@gmail.com</string>-->
<!--    <string name="hardPassword">Mlynarski98!</string>-->

    <string name="logIn">Zaloguj się</string>
    <string name="createAccount">Nie mam konta, co zrobić?</string>
    <string name="textViewHelloInfo">Zaloguj się, aby dostać się do bazy kursów</string>
    <string name="forgotPassword">Nie pamiętam hasła</string>
    <string name="previevBtn"><![CDATA[<]]></string>


</resources>