<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Login">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="149dp"
                    android:layout_height="126dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

<!--                app:srcCompat="@mipmap/be_safe_icon2"-->
                <TextView
                    android:id="@+id/textViewBeSafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/app_name"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/textViewHelloLayout"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewBeSafe">


                    <TextView
                        android:id="@+id/textViewHello"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="Cześć"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewHelloInfo"
                        android:layout_width="310dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingStart="20sp"
                        android:paddingEnd="20sp"
                        android:text="@string/textViewHelloInfo"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewHello" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/editTextPersonName"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/round_input"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textPersonName"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:text="@string/hardEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewHelloLayout" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="28dp"
                    android:background="@drawable/round_input"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingStart="20sp"
                    android:paddingEnd="20sp"
                    android:text="@string/hardPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPersonName" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:text="@string/forgotPassword"
                    android:textColor="@color/blueActionButton"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintRight_toRightOf="@+id/editTextTextPassword"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40sp"
                    android:background="@drawable/round_button_blue"
                    android:onClick="logInButton"
                    android:text="@string/logIn"
                    android:textColor="@color/courseFontWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40sp"
                    android:text="@string/createAccount"
                    android:textColor="@color/blueActionButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>